--- a/catalog/templates/catalog/category.html
+++ b/catalog/templates/catalog/category.html
@@ -1,27 +1,68 @@
 {% extends "base.html" %}
 
 {% block title %}
-    {{ current_category }} | {{ block.super }}
+{{ current_category }} | {{ block.super }}
 {% endblock %}
 
 {% block container %}
 <div class="page-header">
     <h1>{{ current_category }}</h1>
 </div>
-<div class="row">
-    {% for prod in product_list %}
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <a href="{{ prod.get_absolute_url }}">
-                <img src="http://placehold.it/350x250" alt="" />
-            </a>
-            <div class="caption">
-                <h3>{{prod}}</h3>
-                {{prod.description|linebreaks}}
-                <p><a href="{{ prod.get_absolute_url }}" class="btn btn-success" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+<div class="container">
+    <div class="row">
+        {% for prod in product_list %}
+        <div class="col-12 col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <a href="{{ prod.get_absolute_url }}">
+                    <img src="http://placehold.it/350x250" alt="" />
+                </a>
+                <div class="caption">
+                    <h3>{{prod}}</h3>
+                    {{prod.description|linebreaks}}
+                    <p><a href="{{ prod.get_absolute_url }}" class="btn btn-success" role="button">Button</a> <a
+                            href="#" class="btn btn-default" role="button">Button</a></p>
+                </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    {% endfor %}
+
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4">
+            <nav aria-label="navegacao-paginacao">
+                <ul class="pagination">
+
+                    <!-- botao anterios -->
+                    {% if page_obj.has_previous %}
+                    <li class="page-item"><a class="page-link"
+                            href="?page={{ page_obj.previous_page_number}}">&laquo;</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">&laquo;</a></li>
+                    {% endif %}
+
+                    <!-- centro -->
+                    {% for num in paginator.page_range %}
+                    {% if page_obj.number == num %}
+                    <li class="page-item active"><a class="page-link" href="#">{{num}}</a></li>
+                    {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{num}}">{{num}}</a></li>
+                    {% endif %}
+                    {% endfor %}
+
+                    <!-- next -->
+                    {% if page_obj.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{page_obj.next_page_number}}">&raquo;</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled"><a class="page-link" href="#">&raquo;</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
+        </div>
+    </div>
+
 </div>
+</div>
+
 {% endblock %}
