--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Listagem de Produtos | {{ block.super }}
+Listagem de Produtos | {{ block.super }}
 {% endblock %}
 
 {% block container %}
@@ -18,10 +18,14 @@
             <div class="caption">
                 <h3>{{prod}}</h3>
                 {{prod.description|linebreaks}}
-                <p><a href="{{ prod.get_absolute_url }}" class="btn btn-success" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                <p><a href="{{ prod.get_absolute_url }}" class="btn btn-success" role="button">Button</a> <a href="#"
+                        class="btn btn-default" role="button">Button</a></p>
             </div>
         </div>
+        
     </div>
     {% endfor %}
+  
+
 </div>
 {% endblock %}
