--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -41,12 +41,20 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Minha Conta</a></li>
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'profile' %}">Minha Conta</a></li>
+          <li><a href="{% url 'logout' %}">Sair</a></li>
+          {% else %}
+
+          <li><a href="{% url 'login' %}">Entrar</a></li>
+          <li><a href="{% url 'register' %}">Cadastro</a></li>
+          {% endif %}
         </ul>
       </div>
     </div>
   </div>
-  <div class="container">
+  <br><br>
+  <div class="container margin-top">
     {% block container %}{% endblock %}
     <footer>
       <div class="row">
