implementando funcionalidades do carrinho de compras

--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -15,6 +15,9 @@
       </a>
   </div>
   <div class="col-sm-8">
+    <p class="text-right">
+      <a href="{% url 'carrinho' product.slug %}" class="btn btn-success">adcionar ao carrinho</a>
+    </p>
    {{product.description}}
   </div>
 </div>
