--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -42,6 +42,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {% if user.is_authenticated %}
+          <li><a href="{% url 'cart' %}">Carrinho</a></li>
           <li><a href="{% url 'profile' %}">Minha Conta</a></li>
           <li><a href="{% url 'logout' %}">Sair</a></li>
           {% else %}
@@ -49,6 +50,7 @@
           <li><a href="{% url 'login' %}">Entrar</a></li>
           <li><a href="{% url 'register' %}">Cadastro</a></li>
           {% endif %}
+          
         </ul>
       </div>
     </div>
@@ -70,6 +72,13 @@
       </div>
     </footer>
   </div>
+  {% if messages %}
+    {%for message in messages %}
+    <div class="alert alert-primary" role="alert">
+      {{message}}
+    </div>
+    {%endfor%}
+    {% endif %}
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="{% static 'assets/bootstrap.min.js' %}"></script>
 </body>
