fazendo ajustes no profile de usuario

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django E-Commerce{% endblock %}</title>
+  <title style="color: red;">{% block title %}Port E-Commerce{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
@@ -15,7 +15,7 @@
   <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a href="" class="navbar-brand">Django E-Commerce</a>
+        <a href="" class="navbar-brand" style="color: red;">Port E-Commerce</a>
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
