--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -13,11 +13,15 @@
           <a href="#" class="list-group-item active">Minha Conta</a>
           <a href="{% url 'update' %}" class="list-group-item">Alterar Dados</a>
           <a href="{% url 'alter_senha' %}" class="list-group-item">Alterar Senha</a>
+          <a href="{% url 'order_list' %}" class="list-group-item">Meus Pedidos</a>
+          
         </div>
     </div>
     <div class="col-md-8">
         {% block accounts_container %}
-        <h2>Bem vindo {{user}}</h2>
+        <h2 style="color: red">Bem vindo {{user}}</h2>
+        <br>
+        <h4>Aqui você pode alterar seus dados de cadastro.</h4>
         {% endblock %}
     </div>
 </div>
