--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block container %}
 <div class="jumbotron page-header">
-		  <h1>Django E-Commerce</h1>
+		  <h1 style="color: red;" >Port E-Commerce</h1>
 		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		  <p><a class="btn btn-primary">Saiba mais</a></p>
 		</div>
