--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -81,6 +81,7 @@
     {% endif %}
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="{% static 'assets/bootstrap.min.js' %}"></script>
+  {% block scripts %} {% endblock %}
 </body>
 
 </html>
