--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,6 +7,10 @@
   <title style="color: red;">{% block title %}Port E-Commerce{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+
   <link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
   <link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
 </head>
