--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,69 +7,87 @@
   <title style="color: red;">{% block title %}Port E-Commerce{% endblock %}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  
+
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
-  <link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}" media="screen" />
-  <link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-  <div class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <a href="" class="navbar-brand" style="color: red;">Port E-Commerce</a>
-        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="navbar-collapse collapse" id="navbar-main">
-        <ul class="nav navbar-nav">
-          <li>
-            <a href="{% url 'index' %}">Início</a>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="{% url 'produtos' %}" id="download">Categorias <span
-                class="caret"></span></a>
-            <ul class="dropdown-menu" aria-labelledby="download">
-              {% for i in categories %}
-              <li><a href="{{ i.get_absolute_url }}">{{i}}</a></li>
-              {% endfor %}
-            </ul>
-          </li>
-          <li>
-            <a href="{% url 'contact' %}">Contato</a>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          {% if user.is_authenticated %}
-          <li><a href="{% url 'cart' %}">Carrinho</a></li>
-          <li><a href="{% url 'profile' %}">Minha Conta</a></li>
-          <li><a href="{% url 'logout' %}">Sair</a></li>
-          {% else %}
+  <nav class="navbar navbar-default">
+    <a style="color: red;" class="navbar-brand" href="#">Port E-Commerce</a>
 
-          <li><a href="{% url 'login' %}">Entrar</a></li>
-          <li><a href="{% url 'register' %}">Cadastro</a></li>
-          {% endif %}
-          
-        </ul>
-      </div>
+    <div id="navbarNav">
+      <ul class="nav me-auto">
+        {% if user.is_authenticated %}
+
+        <li><a class="nav-item nav-link" href="{% url 'profile' %}">Minha Conta</a></li>
+        <li><a class="nav-item nav-link" href="{% url 'logout' %}">Sair</a></li>
+        {% else %}
+
+        <li><a class="nav-item nav-link" href="{% url 'login' %}">Entrar</a></li>
+        <li><a class="nav-item nav-link" href="{% url 'register' %}">Cadastro</a></li>
+        {% endif %}
+
+      </ul>
+      <!-- <ul class="nav me-auto">
+  
+        <li>
+          <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+        </li>
+        <li>
+          <a class="nav-item nav-link" href="{% url 'login' %}">Logout</a>
+        </li>
+      </ul> -->
     </div>
+  </nav>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="{% url 'index' %}">Inicio</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle float-right" href="#" id="navbarDropdownMenuLink" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Categorias
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              {% for i in categories %}
+
+              <a class="dropdown-item" href="{{ i.get_absolute_url }}">{{i}}</a>
+
+              {% endfor %}
+            </div>
+          </li>
+        </ul>
+        <!-- ml-auto ajusta o item carrinho a direita -->
+        <ul class="navbar-nav ml-auto">
+          {% if user.is_authenticated %}
+          <li><a class="nav-item nav-link" href="{% url 'cart' %}">Carrinho</a></li>
+          {% endif %}
+        </ul>
+
+      </div>
+    </nav>
+    <br>
+
   </div>
-  <br><br>
+  <br>
   <div class="container margin-top">
     {% block container %}{% endblock %}
     <footer>
       <div class="row">
         <div class="col-lg-12">
           <ul class="list-unstyled">
-            <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
-            <li><a href="">Início</a></li>
             <li><a href="{% url 'produtos' %}">Produtos</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="{% url 'contact' %}">Contato</a></li>
             <li><a href="">Termos e Privacidade</a></li>
           </ul>
         </div>
@@ -77,14 +95,23 @@
     </footer>
   </div>
   {% if messages %}
-    {%for message in messages %}
-    <div class="alert alert-primary" role="alert">
-      {{message}}
-    </div>
-    {%endfor%}
-    {% endif %}
+  {%for message in messages %}
+  <div class="alert alert-primary" role="alert">
+    {{message}}
+  </div>
+  {%endfor%}
+  {% endif %}
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="{% static 'assets/bootstrap.min.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
   {% block scripts %} {% endblock %}
 </body>
 
