--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,11 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
@@ -32,15 +31,7 @@
         {% endif %}
 
       </ul>
-      <!-- <ul class="nav me-auto">
-  
-        <li>
-          <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-        </li>
-        <li>
-          <a class="nav-item nav-link" href="{% url 'login' %}">Logout</a>
-        </li>
-      </ul> -->
+    
     </div>
   </nav>
   <div class="container">
@@ -83,7 +74,7 @@
   <div class="container margin-top">
     {% block container %}{% endblock %}
     <footer>
-      <div class="row">
+      
         <div class="col-lg-12">
           <ul class="list-unstyled">
             <li><a href="{% url 'produtos' %}">Produtos</a></li>
@@ -91,7 +82,7 @@
             <li><a href="">Termos e Privacidade</a></li>
           </ul>
         </div>
-      </div>
+      
     </footer>
   </div>
   {% if messages %}
