--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
   <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="{% url 'index' %}">Inicio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +45,7 @@
         <ul class="navbar-nav">
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle float-right" href="#" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Categorias
             </a>
