--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block container %}
-<div class="jumbotron page-header">
+<div class="">
 		  <h1 style="color: red;" >Port E-Commerce</h1>
-		  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		  <p>Site E-Commerce desenvolvido com Python-Django, pra fins de Portifólio.</p>
 		  <p><a class="btn btn-primary">Saiba mais</a></p>
 		</div>
 {% endblock %}
