--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-color: rgb(138, 137, 151);
+    background-color: hsl(202, 47%, 42%);
     margin: 0;
     padding: 0;
     height: 100%;
