configuração pra deploy

--- a/catalog/templates/catalog/_product.html
+++ b/catalog/templates/catalog/_product.html
@@ -3,7 +3,7 @@
     <div class="thumbnail">
        
         <div class="caption">
-            <h1>{{prod}}</h1>
+            <h2>{{prod}}</h2>
             <br>
             
              <a href="{{ product.get_absolute_url }}">
@@ -16,7 +16,7 @@
             </p>
             {% if messages %}
             {%for message in messages %}
-            <div class="alert alert-primary" role="alert">
+            <div>
                 {{message}}
             </div>
             {%endfor%}
