--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -22,7 +22,7 @@ Finalização da Compra
     <a href="" class="btn btn-success">Pagar com Pix</a>
     </div>
         <div class="col-md-4">
-            <a href="{% url 'paypal' order.pk  %}" class="btn btn-primary">Pagar com Cartão</a>
+            <a href="{% url 'paypal' order.pk  %}" class="btn btn-primary">Pagar com Paypal</a>
     </div>
 </div>
 {% endblock %}
