configuração pra deploy

--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -16,7 +16,7 @@
 
       <label for="id_username" class="col-md-3 control-label">Usuário</label>
       <div class="col-md-9">
-        <input name="username" type="text" class="form-control" id="username" placeholder="Usuário" />
+        <input name="username" type="text" class="form-control" autocomplete="off" id="username" placeholder="Usuário"/>
       </div>
     </div>
     <div class="form-group">
