--- a/catalog/templates/catalog/_product.html
+++ b/catalog/templates/catalog/_product.html
@@ -12,7 +12,7 @@
         <br><br>
             <h6>{{prod.description|linebreaks}}</h6>
             <p><a href="{% url 'product' prod.slug %}" class="btn btn-default" role="button">Detalhes</a>
-                <a href="{% url 'carrinho' prod.slug %}" class="btn btn-success" role="button">Adcionar</a>
+                <a href="{% url 'carrinho' prod.slug %}" class="btn btn-success cart" role="button">Adcionar</a>
             </p>
             {% if messages %}
             {%for message in messages %}
