--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
@@ -19,6 +19,17 @@
     <a style="color: red;" class="navbar-brand" href="#">Port E-Commerce</a>
 
     <div id="navbarNav">
+
+      <ul class="nav">
+              <li>
+                <form class="navbar-form navbar-left" role="search" action="{% url 'produtos' %}">
+                  <div class="form-group">
+                    <input name="pesquisa" type="text" class="form-control" placeholder="Pesquisar..." />
+                  </div>
+                </form>
+              </li>
+      </ul>
+
       <ul class="nav me-auto">
         {% if user.is_authenticated %}
 
@@ -31,7 +42,7 @@
         {% endif %}
 
       </ul>
-    
+
     </div>
   </nav>
   <div class="container">
@@ -74,15 +85,15 @@
   <div class="container margin-top">
     {% block container %}{% endblock %}
     <footer>
-      
-        <div class="col-lg-12">
-          <ul class="list-unstyled">
-            <li><a href="{% url 'produtos' %}">Produtos</a></li>
-            <li><a href="{% url 'contact' %}">Contato</a></li>
-            <li><a href="">Termos e Privacidade</a></li>
-          </ul>
-        </div>
-      
+
+      <div class="col-lg-12">
+        <ul class="list-unstyled">
+          <li><a href="{% url 'produtos' %}">Produtos</a></li>
+          <li><a href="{% url 'contact' %}">Contato</a></li>
+          <li><a href="">Termos e Privacidade</a></li>
+        </ul>
+      </div>
+
     </footer>
   </div>
   {% if messages %}
