--- a/catalog/templates/catalog/category.html
+++ b/catalog/templates/catalog/category.html
@@ -10,7 +10,9 @@
 </div>
 <br><br>
 <div class="container">
+    <div id="result"></div>
     <div class="row">
+        
         {% for prod in product_list %}
        {% include 'catalog/_product.html' %}
         {% endfor %}
