--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -13,6 +13,7 @@ Listagem de Produtos | {{ block.super }}
     {% include 'catalog/_product.html' %}
     {% endfor %}
 </div>
+<div id="result"></div>
 
 <div class="row">
     <div class="col-12 col-sm-6 col-md-4">
