--- a/checkout/templates/checkout/cart.html
+++ b/checkout/templates/checkout/cart.html
@@ -7,69 +7,74 @@
 
 {% block container %}
 
-		<div class="page-header">
-			<h1>Carrinho de Compras</h1>
-		</div>
-        <br>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <form class="" action="" method="post">
-                    {% csrf_token %}
-                    {{ formset.management_form}}
-                    <table class="table table-bordered">
-                        <thead>
-                            <th>
-                                ID
-                            </th>
-                            <th>
-                                Nome
-                            </th>
-							<th>
-                                Preço
-                            </th>
-                            <th style="width: 10%;">
-                                Quantidade
-                            </th>
-							<th>
 
-							</th>
-                        </thead>
-                        <tbody>
-                            {% for form in formset %}
-                            <tr>
-                                <td>
-                                    {{form.instance.product.slug}}
-                                </td>
-                                <td>
-                                   <a href="#">{{form.instance.product}}</a>
-                                </td>
-                                <td>
-                                    {{ form.instance.price|floatformat:"2" }}
-                                </td>
-								<td>
-                                    {{ form.quantity }}
-                                </td>
-								
-								<td>
-                                    
-                                </td>
-								<td class="text-center">
-									<button name="{{form.DELETE.html_name}}" value="on" type="submit" class="btn btn-danger btn-sm">Remover</button>
-                                    {{form.id}}
-								</td>
-                            </tr>
-                            {%endfor%}
-                        </tbody>
-                    </table>
-                    <br>
-                    <p class="text-right">
-						<a href="{% url 'produtos' %}" class="pull-left btn btn-default">Continuar Compras</a>
-						<button type="submit" class="btn btn-primary" name="button">Atualizar Carrinho</button></li>
-                        
-						<a href="{% url 'checkout' %}" class="btn btn-success">Finalizar Compra</a>
-                     
-                    </p>
-                </form>
-            </div>
-        </div>
+
+<div class="page-header">
+    <h1>Carrinho de Compras</h1>
+</div>
+<br>
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <form class="" action="" method="post">
+            {% csrf_token %}
+            {{ formset.management_form}}
+            <table class="table table-bordered">
+                <thead>
+                    <th>
+                        ID
+                    </th>
+                    <th>
+                        Nome
+                    </th>
+                    <th>
+                        Preço
+                    </th>
+                    <th style="width: 10%;">
+                        Quantidade
+                    </th>
+                    <th>
+
+                    </th>
+                </thead>
+                <tbody>
+                    {% for form in formset %}
+                    <tr>
+                        <td>
+                            {{form.instance.product.slug}}
+                        </td>
+                        <td>
+                            <a href="#">{{form.instance.product}}</a>
+                        </td>
+                        <td>
+                            {{ form.instance.price|floatformat:"2" }}
+                        </td>
+                        <td>
+                            {{ form.quantity }}
+                        </td>
+
+                        <td>
+
+                        </td>
+                        <td class="text-center">
+                            <button name="{{form.DELETE.html_name}}" value="on" type="submit"
+                                class="btn btn-danger btn-sm">Remover</button>
+                            {{form.id}}
+                        </td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
+            </table>
+            <br>
+            <p class="text-right">
+                <a href="{% url 'produtos' %}" class="pull-left btn btn-default">Continuar Compras</a>
+                <button type="submit" class="btn btn-primary" name="button">Atualizar Carrinho</button></li>
+
+                <a href="{% url 'checkout' %}" class="btn btn-success">Finalizar Compra</a>
+
+            </p>
+        </form>
+    </div>
+</div>
+
+
 {% endblock %}
