--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -21,13 +21,13 @@
     <div id="navbarNav">
 
       <ul class="nav">
-              <li>
-                <form class="navbar-form navbar-left" role="search" action="{% url 'produtos' %}">
-                  <div class="form-group">
-                    <input name="pesquisa" type="text" class="form-control" placeholder="Pesquisar..." />
-                  </div>
-                </form>
-              </li>
+        <li>
+          <form class="navbar-form navbar-left" role="search" action="{% url 'produtos' %}">
+            <div class="form-group">
+              <input name="pesquisa" type="text" class="form-control" placeholder="Pesquisar..." />
+            </div>
+          </form>
+        </li>
       </ul>
 
       <ul class="nav me-auto">
@@ -114,7 +114,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-  {% block scripts %} {% endblock %}
+  <script src="{% static 'js/script.js' %}"></script>
 </body>
 
 </html>
