--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -4,25 +4,69 @@
 
 {% block container %}
 <ol class="breadcrumb">
-  <li><a href="#">Início</a></li>
-  <li class="active">Minha Conta</li>
+
+  <a href="{% url 'profile' %}">
+    <li class="active">Minha Conta</li>
+  </a>
 </ol>
-<div class="row">
+
+<br>
+<div class="container">
+  <div class="row">
     <div class="col-md-4">
-        <div class="list-group">
-          <a href="#" class="list-group-item active">Minha Conta</a>
-          <a href="{% url 'update' %}" class="list-group-item">Alterar Dados</a>
-          <a href="{% url 'alter_senha' %}" class="list-group-item">Alterar Senha</a>
-          <a href="{% url 'order_list' %}" class="list-group-item">Meus Pedidos</a>
-          
+      <div class="card">
+
+        <div class="top-container">
+
+          <img src="https://i.imgur.com/G1pXs7D.jpg" class="img-fluid profile-image" width="70">
+
+          <div class="ml-3">
+            <h5 class="name">Clarke Jeffery</h5>
+            <p class="mail">clark@zmail.com</p>
+          </div>
         </div>
+
+
+        <div class="middle-container d-flex justify-content-between align-items-center mt-3 p-2">
+          <div class="dollar-div px-3">
+
+            <div class="round-div"><i class="fa fa-dollar dollar"></i></div>
+
+          </div>
+          <div class="d-flex flex-column text-right mr-2">
+            <span class="current-balance">Current Balance</span>
+            <span class="amount"><span class="dollar-sign">$</span>1476</span>
+          </div>
+
+        </div>
+
+        <div class="recent-border mt-4">
+          <span class="fashion-studio"><a href="{% url 'update' %}">Alterar Dados</a></span>
+
+        </div>
+        <div class="wishlist-border pt-2">
+          <span class="fashion-studio"><a href="{% url 'alter_senha' %}">Alterar Senha</a></span>
+        </div>
+        <div class="fashion-studio-border pt-2">
+          <span class="fashion-studio"><a href="{% url 'order_list' %}">Meus Pedidos</a></span>
+        </div>
+
+
+      </div>
     </div>
     <div class="col-md-8">
-        {% block accounts_container %}
-        <h2 style="color: red">Bem vindo {{user}}</h2>
-        <br>
-        <h4>Aqui você pode alterar seus dados de cadastro.</h4>
-        {% endblock %}
+      {% block accounts_container %}
+      <h2 style="color: red">Bem vindo {{user}}</h2>
+      <br>
+      <h4>Aqui você pode alterar seus dados de cadastro.</h4>
+      {% endblock %}
     </div>
+
+    {% include "./update-user.html" %}
+  </div>
+
 </div>
+
+
+
 {% endblock %}
