--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -71,9 +71,11 @@
         </ul>
         <!-- ml-auto ajusta o item carrinho a direita -->
         <ul class="navbar-nav ml-auto">
+
           {% if user.is_authenticated %}
           <li><a class="nav-item nav-link" href="{% url 'cart' %}">Carrinho</a></li>
           {% endif %}
+
         </ul>
 
       </div>
@@ -91,7 +93,11 @@
           <li><a href="{% url 'produtos' %}">Produtos</a></li>
           <li><a href="{% url 'contact' %}">Contato</a></li>
           <li><a href="">Termos e Privacidade</a></li>
+          <li class="copy">
+            <p>Copyright © 2022 Willander Vitorino</p>
+          </li>
         </ul>
+
       </div>
 
     </footer>
@@ -103,6 +109,9 @@
   </div>
   {%endfor%}
   {% endif %}
+
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
     integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
