implementando total no carrinho de compras

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -21,8 +21,8 @@
           <img src="https://i.imgur.com/G1pXs7D.jpg" class="img-fluid profile-image" width="70">
 
           <div class="ml-3">
-            <h5 class="name">Clarke Jeffery</h5>
-            <p class="mail">clark@zmail.com</p>
+            <h5 class="name">{{user}}</h5>
+            <p class="mail">{{user.email}}</p>
           </div>
         </div>
 
