--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -86,9 +86,9 @@
   <br>
   <div class="container margin-top">
     {% block container %}{% endblock %}
-    <footer>
+    <footer id="footer" class="footer-area section-padding">
 
-      <div class="col-lg-12">
+      <div class="col-md-12">
         <ul class="list-unstyled">
           <li><a href="{% url 'produtos' %}">Produtos</a></li>
           <li><a href="{% url 'contact' %}">Contato</a></li>
@@ -110,9 +110,9 @@
   {%endfor%}
   {% endif %}
 
-  <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> 
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  {% comment %} <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> {% endcomment %}
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
     integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
     crossorigin="anonymous"></script>
