--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background: linear-gradient(45deg, #3d4941, #c5b7b7, #084177, #add4a5, #b1646a, #e0c4b6);
+    background: linear-gradient(45deg, #c1e2cc, #7367af, #084177, #111111);
     margin: 0;
     padding: 0;
     height: 100%;
@@ -229,4 +229,29 @@ footer {
 
 .fashion-studio-border:hover {
     border-bottom: 1px solid #dee2e6 !important;
+}
+
+.total {
+    /* border: 1px solid red; */
+    position: absolute;
+    right: 20px;
+}
+
+.total ul li {
+    list-style-type: none;
+    display: inline;
+    margin: 50px;
+}
+
+/* css dos botoes de finalizar comprar */
+.finalizar {
+    position: absolute;
+    top: 200px;
+    left: 150px;
+}
+
+.finalizar ul li {
+    list-style-type: none;
+    bottom: 30px;
+    margin: 20px;
 }
