--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -4,11 +4,11 @@
 <div class="">
 	<h1 style="color: red;">Port E-Commerce</h1>
 	
-	<p>Site E-Commerce desenvolvido com Python-Django, pra fins de Portifólio.</p>
+	{% comment %} <p>Site E-Commerce desenvolvido com Python-Django, pra fins de Portifólio.</p>
 		<p>neste projeto usei como stack principal: Python-Django|Javascript-Jquery/Ajax.</p>
 		<p>Nele você consegue criar um usuário, editar todos os dados deste usuário, criar um carrinho de compras, fazer checkout e até simular um pagamento usando o Paypal.</p>
 		<p>O intuito foi desenvolver o backend de um E-commerce usual(por isto não foquei no Frontend), neste projeto consigo expor grande parte do conhecimento que tenho com no Framework Django.
-	</p>
+	</p> {% endcomment %}
 	<a href="#">Repositório do Projeto</a>
 </div>
 <div class="container slide">
