--- a/checkout/templates/checkout/cart.html
+++ b/checkout/templates/checkout/cart.html
@@ -2,7 +2,7 @@
 {% load bootstrap5 %}
 {% block title %}
 
-
+Cart
 {% endblock %}
 
 {% block container %}
@@ -157,3 +157,4 @@
 
 
 {% endblock %}
+
