subindo banco de dados postgrsql do render

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -9,7 +9,7 @@
 		<p>Nele você consegue criar um usuário, editar todos os dados deste usuário, criar um carrinho de compras, fazer checkout e até simular um pagamento usando o Paypal.</p>
 		<p>O intuito foi desenvolver o backend de um E-commerce usual(por isto não foquei no Frontend), neste projeto consigo expor grande parte do conhecimento que tenho com no Framework Django.
 	</p> {% endcomment %}
-	<a href="#">Repositório do Projeto</a>
+	<a href="https://github.com/Willanderdev/Django_Ecommerce.git" target="_blank">Repositório do Projeto</a>
 </div>
 <div class="container slide">
 
