--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,7 +11,7 @@
 	</p> {% endcomment %}
 	<a href="https://github.com/Willanderdev/Django_Ecommerce.git" target="_blank">Repositório do Projeto</a>
 </div>
-<div class="container slide">
+{% comment %} <div class="container slide">
 
 	<div class="col-lg-12 carrosel">
 		<ul>
@@ -26,6 +26,6 @@
 			</li>
 		</ul>
 	</div>
-</div>
+</div> {% endcomment %}
 
 {% endblock %}
