--- a/checkout/templates/checkout/cart.html
+++ b/checkout/templates/checkout/cart.html
@@ -117,13 +117,13 @@ Cart
                             <span class="products"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                            Shipping
+                            Envio
                             <span>Gratis</span>
                         </li>
                         <li
                             class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div>
-                                <strong>Total amount</strong>
+                                <strong>Total</strong>
                                 <strong>
                                     <p class="total" style="color: red"></p>
                                 </strong>
@@ -132,20 +132,18 @@ Cart
                         </li>
 
                         <li
-                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                            <a href="{% url 'produtos' %}" class=" btn btn-primary">Continuar Compras</a>
-                        </li>
-
-                        <li
-                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
+                            class="list-group-item d-flex justify-content-between align-items-center border-0  mb-3">
                             <button type="submit" class="btn btn-primary" name="button">Atualizar
                                 Carrinho</button>
                         </li>
 
                         <li
-                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                            <a href="{% url 'checkout' %}" class="btn btn-success">Finalizar Compra</a>
+                            class="list-group-item d-flex justify-content-between align-items-center border-0  mb-3">
+                            <a href="{% url 'produtos' %}" class=" btn btn-primary">Loja</a>
+                                <a href="{% url 'checkout' %}" class="btn btn-success">Pagar</a>
                         </li>
+
+                        
                     </ul>
                 </div>
             </div>
