--- a/checkout/templates/checkout/cart.html
+++ b/checkout/templates/checkout/cart.html
@@ -54,7 +54,7 @@ Cart
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-md-8 ">
+        <div class="col-sm-6 col-md-8 ">
             <form class="" action="" method="post">
                 {% csrf_token %}
                 {{ formset.management_form}}
@@ -104,7 +104,7 @@ Cart
 
         </div>
         <br><br>
-        <div class="col-md-4">
+        <div class="col-sm-12 col-md-4">
             <div class="card mb-4">
                 <div class="card-header py-3">
                     <h5 class="mb-0">Summary</h5>
